# jvanbruegge.github.io

./: .gitignore  CHANGELOG.md  LICENSE  README.md  atom.xml  blog.cabal  hie.yaml  index.html  stack.yaml  style.css
.github/workflows/: ci.yml
2020/programming/open-source-journey/: index.html
2020/programming/redesigning-a-framework/: index.html
articles/2020/: open-source-journey.md  redesigning-a-framework.md
articles/2020/programming/: open-source-journey.md  redesigning-a-framework.md
cooking/: index.html
generator/: Main.hs
programming/: index.html
reviews/: index.html
tags/haskell/: index.html
tags/open-source/: index.html
tags/typescript/: index.html
template/: article.html  header.html  highlighting.css  impressum.html  index.html  post.html  postList.html  style.css
template/tags/: haskell.html  open-source.html  typescript.html
