cabal-version:       2.4
name:                blog
version:             0.0.0.0
synopsis:            My personal blog
description:         My personal blog
homepage:            https://github.com/jvanbruegge/blog
bug-reports:         https://github.com/jvanbruegge/blog/issues
license:             MIT
license-file:        LICENSE
author:              Jan van Brügge
maintainer:          Jan van Brügge <supermanitu@gmail.com>
copyright:           2020 Jan van Brügge
category:            Web
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/jvanbruegge/blog.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , aeson
                     , aeson-optics
                     , binary
                     , optics
                     , shake
                     , slick
                     , text
                     , time

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

  default-extensions:  DerivingStrategies
                     , DeriveGeneric
                     , DeriveAnyClass
                     , OverloadedStrings
                     , TypeApplications

executable blog
  import:              common-options
  hs-source-dirs:      generator
  main-is:             Main.hs

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
